--- a/src/main/webapp/WEB-INF/smartEditor/css/smart_editor2.css
+++ b/src/main/webapp/WEB-INF/smartEditor/css/smart_editor2.css
@@ -54,7 +54,7 @@ body,#smart_editor2,#smart_editor2 p,#smart_editor2 h1,#smart_editor2 h2,#smart_
 #smart_editor2 .se2_text_tool .active .active .se2_layer{display:block}
 #smart_editor2 .se2_text_tool .se2_layer .se2_in_layer{float:left;margin:0;padding:0;border:1px solid #fff;background:#fafafa}
 /* TEXT_TOOLBAR */
-#smart_editor2 .se2_text_tool{position:relative;clear:both;z-index:30;padding:4px 0 4px 3px;background:#f4f4f4 url("../img/bg_text_tool.gif") 0 0 repeat-x;border-bottom:1px solid #b5b5b5;*zoom:1}
+#smart_editor2 .se2_text_tool{position:relative;clear:both;z-index:30;padding:4px 15px 4px 3px;background:#f4f4f4 url("../img/bg_text_tool.gif") 0 0 repeat-x;border-bottom:1px solid #b5b5b5;*zoom:1}
 #smart_editor2 .se2_text_tool:after{content:"";display:block;clear:both}
 #smart_editor2 .se2_text_tool ul{float:left;display:inline;margin-right:3px;padding-left:1px;white-space:nowrap}
 #smart_editor2 .se2_text_tool li{_display:inline;float:left;position:relative;z-index:30}
@@ -174,3 +174,26 @@ body,#smart_editor2,#smart_editor2 p,#smart_editor2 h1,#smart_editor2 h2,#smart_
 #smart_editor2 .se2_text_tool .se2_text_tool_more span.tool_bg{background:none}
 #smart_editor2 .se2_text_tool .hover .se2_text_tool_more{background-position:-13px -41px}
 #smart_editor2 .se2_text_tool .active .se2_text_tool_more{background-position:-26px -41px}
+
+@media screen and (max-width: 640px){
+ #smart_editor2 .se2_text_tool ul:nth-child(4n){clear:both;}
+ #smart_editor2 .se2_text_tool ul{margin-bottom:4px}
+ #smart_editor2 .se2_text_tool ul:nth-child(n+4){margin-bottom:0}
+ #smart_editor2 .se2_text_tool .se2_multy,#smart_editor2 .se2_text_tool .se2_multy button, #smart_editor2 .se2_text_tool .se2_multy button span{height:54px}
+}
+@media screen and (max-width: 515px){
+ #smart_editor2 .se2_text_tool ul:nth-child(3n){clear:both;margin-left:4px}
+ #smart_editor2 .se2_text_tool ul:nth-child(6n),#smart_editor2 .se2_text_tool ul:nth-child(4n){clear:none;margin-left:0}
+ #smart_editor2 .se2_text_tool ul:nth-child(n+3){margin-bottom:0}
+}
+@media screen and (max-width: 370px){
+ #smart_editor2 .se2_text_tool ul:nth-child(2n){clear:both;margin-left:4px}
+ #smart_editor2 .se2_text_tool ul:nth-child(3n){clear:both;margin-left:4px}
+ #smart_editor2 .se2_text_tool ul:nth-child(6n),#smart_editor2 .se2_text_tool ul:nth-child(4n){clear:none;margin-left:0}
+ #smart_editor2 .se2_text_tool ul:nth-child(n+3){margin-bottom:0}
+ #smart_editor2 .se2_text_tool .se2_multy,#smart_editor2 .se2_text_tool .se2_multy button, #smart_editor2 .se2_text_tool .se2_multy button span{height:79px}
+}
+@media screen and (max-width: 325px){
+ #smart_editor2 .se2_text_tool .se2_multy,#smart_editor2 .se2_text_tool .se2_multy button, #smart_editor2 .se2_text_tool .se2_multy button span{height:29px;}
+ #smart_editor2 .se2_text_tool .se2_multy{border-bottom:1px solid #e0dedf}
+}
