--- a/src/main/webapp/WEB-INF/css/fun_main.css
+++ b/src/main/webapp/WEB-INF/css/fun_main.css
@@ -319,7 +319,7 @@ button, input[type=button], input[type=checkbox]+label, input[type=radio]+label,
   max-width: 310px;
   overflow: hidden;
   position: relative;
-  margin-bottom: 30px; 
+  margin-bottom: 30px;
 }
 
 .card:nth-child(3n) {
@@ -330,6 +330,10 @@ button, input[type=button], input[type=checkbox]+label, input[type=radio]+label,
 .card:not(:nth-child(3n)) {
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.card.expired { /* 날짜 지났는지 안 지났는지 */
+  background-color: #ccc; /* 원하는 회색 톤으로 조절하세요 */
 }
 
 .card img {
@@ -346,6 +350,12 @@ button, input[type=button], input[type=checkbox]+label, input[type=radio]+label,
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 6px;
+  height: 40px; /* 이 값을 레이아웃에 맞춰 조절하세요 */
+  line-height: 20px; /* 이 값은 글자 크기와 일치하게 설정하세요 */
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .card h2 {
@@ -420,6 +430,11 @@ button, input[type=button], input[type=checkbox]+label, input[type=radio]+label,
 .card-button:hover::before {
   width: 100%;
 }
+
+.card.expired .card-button { /* 날짜가 지났을 때의 카드 버튼 색상 */
+  background-color: #999; /* 원하는 색상으로 변경하세요 */
+}
+
 /* 카드 끝 */
 
 /*Footer Start*/
