--- a/src/main/webapp/WEB-INF/css/fun_main.css
+++ b/src/main/webapp/WEB-INF/css/fun_main.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+
+
 @font-face {
     font-family: 'NanumBarunGothic';
     font-style: normal;
@@ -302,6 +304,7 @@ button, input[type=button], input[type=checkbox]+label, input[type=radio]+label,
   padding: 20px;
   background-color: #f5f5f5;
   width: 100%;
+  text-decoration: none;
 }
 
 .card-container {
