--- a/src/main/webapp/WEB-INF/css/donation/dona_main.css
+++ b/src/main/webapp/WEB-INF/css/donation/dona_main.css
@@ -346,6 +346,7 @@ a.headerSubSpan:hover{
   padding: 20px;
   background-color: #f5f5f5;
   width: 100%;
+  text-decoration: none;
 }
 
 .card-container {
@@ -358,17 +359,32 @@ a.headerSubSpan:hover{
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  margin-bottom: 24px;
+  flex-basis: calc(33.333% - 20px);
   min-width: 310px;
   max-width: 310px;
   overflow: hidden;
   position: relative;
+  margin-bottom: 30px;
+}
+
+.card:nth-child(3n) {
+  margin-right: 10px;
+  margin-left: 15px;
+}
+
+.card:not(:nth-child(3n)) {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.card.expired { /* 날짜 지났는지 안 지났는지 */
+  background-color: #ccc; /* 원하는 회색 톤으로 조절하세요 */
 }
 
 .card img {
-  width: 100%;
-  height: auto;
-  display: block;
+  width: 100%; /* 이미지 너비를 카드 너비에 맞춤 */
+  height: 308px; /* 이미지 높이를 고정 */
+  object-fit: cover; /* 이미지 비율 유지하며 채우기 */
 }
 
 .card-body {
@@ -379,6 +395,12 @@ a.headerSubSpan:hover{
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 6px;
+  height: 40px; /* 이 값을 레이아웃에 맞춰 조절하세요 */
+  line-height: 20px; /* 이 값은 글자 크기와 일치하게 설정하세요 */
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .card h2 {
@@ -392,6 +414,73 @@ a.headerSubSpan:hover{
   line-height: 1.5;
   margin-bottom: 16px;
 }
+
+.card-progress {
+  background-color: #e8e8e8;
+  height: 5px;
+  margin-bottom: 16px;
+  overflow: hidden;
+}
+
+.card-progress_bar {
+  background-color: #10c838;
+  height: 100%;
+}
+
+.card-percent {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.card-price {
+  font-size: 16px;
+  color: #666;
+}
+
+.card-button {
+	background-color: #4CAF50;
+	border: none;
+	color: white;
+	padding: 10px 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 14px;
+	border-radius: 4px;
+	cursor: pointer;
+	transition: all 0.3s; 
+	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); 
+	position: relative; /* 추가된 스타일 */
+	overflow: hidden; /* 추가된 스타일 */
+}
+
+.card-button:hover {
+  background-color: #66BB6A;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2), 0 5px 15px rgba(0, 0, 0, 0.25); 
+}
+
+/* 새로 추가된 스타일 */
+.card-button::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: all 0.3s;
+}
+
+.card-button:hover::before {
+  width: 100%;
+}
+
+.card.expired .card-button { /* 날짜가 지났을 때의 카드 버튼 색상 */
+  background-color: #999; /* 원하는 색상으로 변경하세요 */
+}
+
+/* 카드 끝 */
 
 .progress {
   background-color: #e8e8e8;
